# MiniLLMLibRS

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  book.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
data/: test.json
docs/src/: SUMMARY.md  api.md  caching.md  claude-subscription.md  conversation-trees.md  cost-estimation.md  cost-tracking.md  custom-providers.md  introduction.md  parameters.md  providers.md  quickstart.md  tool-calling.md
examples/: agent_loop.rs
src/: chat_node.rs  error.rs  lib.rs  main.rs  tools.rs  tracking.rs
src/generator/: info.rs  mod.rs  params.rs  pricing.rs
src/json_repair/: context.rs  mod.rs  parser.rs  tests.rs  value.rs
src/message/: audio.rs  content.rs  image.rs  media.rs  mod.rs  role.rs  video.rs
src/provider/: auth.rs  bpe.rs  client.rs  estimate.rs  mod.rs  providers.rs  response.rs  streaming.rs  wire.rs
src/tools/: args.rs  mod.rs  payload.rs
src/utils/: json.rs  logging.rs  mod.rs
tests/: integration_tests.rs
