[package]
name = "minillmlib"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimalist Rust library for LLM interactions"
license = "MIT"

[lib]
name = "minillmlib"
path = "src/lib.rs"

[[bin]]
name = "minillmlib"
path = "src/main.rs"

[dependencies]
# Serialization - we use serde_json for the final output
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Error handling
thiserror = "2"

[dev-dependencies]
# For running tests
