[package]
name = "minillmlib"
version = "0.5.1"
edition = "2021"
rust-version = "1.86"
description = "A minimalist, async-first Rust library for LLM interactions with streaming support"
license = "MIT"
repository = "https://github.com/WeaveMindAI/MiniLLMLibRS"
homepage = "https://github.com/WeaveMindAI/MiniLLMLibRS"
documentation = "https://docs.rs/minillmlib"
readme = "README.md"
keywords = ["llm", "openai", "openrouter", "ai", "streaming"]
categories = ["api-bindings", "asynchronous", "web-programming"]
authors = ["qfeuilla"]
exclude = [
    "data/*",
    ".env",
    ".github/*",
]

[features]
# Opt-in live integration tests that make REAL, billed API calls (OpenRouter +
# Anthropic). Off by default so `cargo test` is free, offline, and deterministic.
# Run with: `cargo test --features live` (needs OPENROUTER_API_KEY and/or
# ANTHROPIC_API_KEY / ANTHROPIC_AUTH_TOKEN in the environment).
live = []

# Estimate a completion's cost BEFORE sending it. Off by default: it is only
# useful to a caller that must gate a request on affordability, and it embeds a
# 1.6 MB token vocabulary that a plain completion never needs. The price lookup
# (`GeneratorInfo::model_rates`) is NOT behind this feature: pricing a completion
# after the fact needs rates, not a tokenizer.
estimate = ["dep:regex"]

[lib]
name = "minillmlib"
path = "src/lib.rs"

[[bin]]
name = "minillmlib-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
futures = "0.3"

# HTTP & Streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Media processing
base64 = "0.22"

# Utilities
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Splitting a prompt into byte-pair pieces, for the optional `estimate` feature.
# The rust-lang regex crate; the tokenizer itself is ours (`provider::bpe`).
regex = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
